Refactored CultureInfo and RegionInfo extensions
Refactored CultureInfo and RegionInfo extensions so that the
non-extension method methods have been moved to separate classes

--- a/NCldrExtensions/NCldrExtensions.csproj
+++ b/NCldrExtensions/NCldrExtensions.csproj
@@ -34,9 +34,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CultureExtensions.cs" />
     <Compile Include="CultureInfoExtensions.cs" />
     <Compile Include="NCldrCustomCulture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegionExtensions.cs" />
     <Compile Include="RegionInfoExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
