Refactored OtherNumberingSystems to be a List
Refactored OtherNumberingSystems to be a List of OtherNumberingSystem
objects instead of a Hashtable.
Hashtables are no longer used in NCLDR.

--- a/NCldr/NCldr.csproj
+++ b/NCldr/NCldr.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Types\ListPattern.cs" />
     <Compile Include="Types\Message.cs" />
     <Compile Include="Types\MetaTimeZone.cs" />
+    <Compile Include="Types\OtherNumberingSystem.cs" />
     <Compile Include="Types\ParentCulture.cs" />
     <Compile Include="Types\Reference.cs" />
     <Compile Include="Types\RegionCode.cs" />
