--- a/NCldr/NCldr.csproj
+++ b/NCldr/NCldr.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="INCldrData.cs" />
     <Compile Include="NCldr.cs" />
     <Compile Include="NCldrData.cs" />
