Added support for the new TimeData
CLDR Release 23 adds TimeData for regions.
NCLDR has new TimeData and RegionHour types to support this data.
Corresponding properties and extension methods have been added.

--- a/NCldr/NCldr.csproj
+++ b/NCldr/NCldr.csproj
@@ -37,6 +37,8 @@
     <Compile Include="NCldrLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Calendar.cs" />
+    <Compile Include="Types\RegionHour.cs" />
+    <Compile Include="Types\TimeData.cs" />
     <Compile Include="Types\DatesDisplayNames.cs" />
     <Compile Include="Types\CalendarType.cs" />
     <Compile Include="Types\Casing.cs" />
