--- a/NCldr/NCldr.csproj
+++ b/NCldr/NCldr.csproj
@@ -34,7 +34,7 @@
     <Compile Include="INCldrData.cs" />
     <Compile Include="NCldr.cs" />
     <Compile Include="NCldrData.cs" />
-    <Compile Include="NCldrDataSource.cs" />
+    <Compile Include="NCldrBinaryFileDataSource.cs" />
     <Compile Include="NCldrLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Calendar.cs" />
