Added INCldrFileDataSource interface
Added INCldrFileDataSource interface. NCldrBinaryFileDataSource now
implements the INCldrFileDataSource interface. Consumers of
NCldrBinaryFileDataSource now use the interface instead of the class.

--- a/NCldr/NCldr.csproj
+++ b/NCldr/NCldr.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="INCldrData.cs" />
+    <Compile Include="INCldrFileDataSource.cs" />
     <Compile Include="NCldr.cs" />
     <Compile Include="NCldrData.cs" />
     <Compile Include="NCldrBinaryFileDataSource.cs" />
