Added support for saving to and loading from JSON

--- a/NCldr/NCldr.csproj
+++ b/NCldr/NCldr.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="NCldrJsonFileDataSource.cs" />
     <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="INCldrData.cs" />
     <Compile Include="INCldrFileDataSource.cs" />
@@ -128,7 +129,13 @@
     <Compile Include="Types\WeekData.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
