--- a/NCldr/NCldr.csproj
+++ b/NCldr/NCldr.csproj
@@ -42,6 +42,8 @@
     <Compile Include="NCldrLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Calendar.cs" />
+    <Compile Include="Types\MiscellaneousPatternSet.cs" />
+    <Compile Include="Types\MiscellaneousPattern.cs" />
     <Compile Include="Types\RelativeTimeRuleSet.cs" />
     <Compile Include="Types\RelativeTimeRule.cs" />
     <Compile Include="Types\RegionHour.cs" />
