Support for new data sources
Provided an extensibility mechanism to allow developers to add new NCLDR
data sources.
Added a new NCLDR data source for Google's Protocol Buffers.

--- a/NCldr/NCldr.csproj
+++ b/NCldr/NCldr.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Extensions\ObjectExtensions.cs" />
+    <Compile Include="NCldrDataSources.cs" />
     <Compile Include="NCldrXmlFileDataSource.cs" />
     <Compile Include="NCldrJsonFileDataSource.cs" />
     <Compile Include="Extensions\ListExtensions.cs" />
