Added a new Binary JSON data source
Added an NCLDR data source for Newtonsoft's Binary JSON reader/writer

--- a/NCldr/NCldr.csproj
+++ b/NCldr/NCldr.csproj
@@ -30,6 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="NCldrBsonFileDataSource.cs" />
+    <Compile Include="NCldrJsonFileDataSourceBase.cs" />
     <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="NCldrDataSources.cs" />
     <Compile Include="NCldrXmlFileDataSource.cs" />
